[gd_scene load_steps=10 format=3 uid="uid://bcuqxcuh16nl7"]

[ext_resource type="Script" path="res://scenes/ui/level_failed/level_failed.gd" id="1_0cr7q"]
[ext_resource type="Theme" uid="uid://l28o45infhdy" path="res://scenes/ui/game.theme" id="1_fxhpt"]
[ext_resource type="Script" path="res://scripts/nodes/slideout_margin_container.gd" id="2_35u2y"]
[ext_resource type="Shader" path="res://shaders/palette_swap.gdshader" id="4_krvjg"]
[ext_resource type="AudioStream" uid="uid://coc8owoa10ybx" path="res://assets/audio/lilbot/you_let_us_die.wav" id="4_ooiru"]
[ext_resource type="Texture2D" uid="uid://h0jq4je3xbt7" path="res://assets/graphics/palettes/warm-ochre-4-1x.png" id="5_aihdf"]
[ext_resource type="Texture2D" uid="uid://b7m2v4p5ab82w" path="res://assets/graphics/palettes/moonlight-gb-4-1x.png" id="6_kw4km"]
[ext_resource type="Script" path="res://scripts/nodes/ColorRectSwap.gd" id="7_au825"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5lfs2"]
shader = ExtResource("4_krvjg")
shader_parameter/num_colors = 4
shader_parameter/invert = false
shader_parameter/base_palette = ExtResource("5_aihdf")
shader_parameter/new_palette = ExtResource("6_kw4km")

[node name="LevelFailed" type="Control"]
texture_filter = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_fxhpt")
script = ExtResource("1_0cr7q")

[node name="Slideout" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
script = ExtResource("2_35u2y")
use_window_size = true
use_window_center_as_initial = true
start_hidden = true
anim_ease_in = true
anim_ease_out = true

[node name="PanelContainer" type="PanelContainer" parent="Slideout"]
layout_mode = 2
size_flags_vertical = 0

[node name="Layout" type="VBoxContainer" parent="Slideout/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 22

[node name="Label" type="Label" parent="Slideout/PanelContainer/Layout"]
layout_mode = 2
text = "You let your Little Botties down!
... or explode
... or get impaled
... hell, I don't know, just...
YOU FAILED"
horizontal_alignment = 1

[node name="ButtonOptions" type="HBoxContainer" parent="Slideout/PanelContainer/Layout"]
layout_mode = 2

[node name="BTN_Restart" type="Button" parent="Slideout/PanelContainer/Layout/ButtonOptions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Restart"

[node name="BTN_Quit" type="Button" parent="Slideout/PanelContainer/Layout/ButtonOptions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Quit to Menu"

[node name="ColorRectSwap" type="ColorRect" parent="Slideout"]
material = SubResource("ShaderMaterial_5lfs2")
layout_mode = 2
script = ExtResource("7_au825")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_ooiru")

[connection signal="slide_finished" from="Slideout" to="." method="_on_slideout_slide_finished"]
[connection signal="pressed" from="Slideout/PanelContainer/Layout/ButtonOptions/BTN_Restart" to="." method="_on_btn_restart_pressed"]
[connection signal="pressed" from="Slideout/PanelContainer/Layout/ButtonOptions/BTN_Quit" to="." method="_on_btn_quit_pressed"]
